[package]
name = "mbedtls-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
base64-stream = "1.2.7"
cc = "1.0.74"
eyre = "0.6.8"
glob = "0.3.0"
bindgen = "0.61.0"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Crypto", "Window"] }
